# agendadefender

./: .gitignore  CNAME  LICENSE  Makefile  README.adoc  README.md  index.html  main.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  server.py
.github/workflows/: ci.yml  deploy-worker.yml  gh-pages.yml  release.yml
.kiro/specs/core-ux-improvements/: design.md  requirements.md  tasks.md
icon/: agenda-defender.icns  convert-icons.sh
scripts/: agenda-defender.js  alert-trigger.js  analytics.js  audio-manager.js  controls-dimmer.js  fullscreen.js  keyboard-shortcuts.js  pause-controller.js  progress-bar.js  section-navigator.js  state-manager.js  time-adjuster.js  time-warnings.js  touch-gesture-handler.js  url-sharing.js  vibration-manager.js
styles/: styles.css
tests/: agenda-defender.test.js  analytics.test.js  audio-alerts.test.js  core-ux-improvements.test.js  setup.js  timer-controls.test.js  url-sharing.test.js
tests/e2e/: smoke.spec.js
workers/url-shortener/: Makefile  README.adoc  package-lock.json  package.json  wrangler.toml
workers/url-shortener/src/: worker.js
