[project]
name = "time-my-talk"
version = "1.0.4"
description = "A meeting and talk timer application"
authors = [
    {name = "Viktor Gamov", email = "viktor@gamov.io"},
]
dependencies = [
    "flask>=2.0.0"
]
requires-python = ">=3.7"
readme = "README.adoc"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
